// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button deve adicionar um hint custom automaticamente 1`] = `
<span
  class="hint-wrapper"
>
  <button
    class="css-96lcq"
    type="button"
  >
    <span>
      Botão
    </span>
  </button>
</span>
`;

exports[`Button deve adicionar um hint string automaticamente 1`] = `
<span
  class="hint-wrapper"
>
  <button
    class="css-96lcq"
    type="button"
  >
    <span>
      Botão
    </span>
  </button>
</span>
`;

exports[`Button deve renderizar corretamente 1`] = `
<button
  class="css-96lcq"
  type="button"
>
  <span>
    Botão
  </span>
</button>
`;

exports[`Button deve ter animação de "carregando" ao especificar onClick com retorno do tipo Promise 1`] = `
<ThemeProvider
  theme={
    Object {
      "breakpoint": Object {
        "small": "@media (max-width: 1280px)",
      },
      "color": Object {
        "gray10": "#e6e6e6",
        "gray20": "#cccccc",
        "gray30": "#b3b3b3",
        "gray40": "#999999",
        "gray50": "#808080",
        "gray60": "#666666",
        "gray70": "#4d4d4d",
        "gray80": "#333333",
        "gray90": "#1a1a1a",
        "primary": "#1e98ff",
        "red": "#f6001c",
        "text": "#4d4d4d",
        "white": "#ffffff",
      },
      "font": Object {
        "textFamily": "\\"Noto Sans\\", sans-serif",
        "textSize": 16,
        "titleFamily": "\\"Noto Sans\\", sans-serif",
      },
      "global": Object {
        "@font-face": Object {
          "fontFamily": "\\"Noto Sans\\"",
          "fontStyle": "normal",
          "fontWeight": "400",
          "src": "url(test-file-stub) format(\\"truetype\\")",
        },
      },
    }
  }
>
  <ThemeProvider
    theme={
      Object {
        "breakpoint": Object {
          "small": "@media (max-width: 1280px)",
        },
        "color": Object {
          "gray10": "#e6e6e6",
          "gray20": "#cccccc",
          "gray30": "#b3b3b3",
          "gray40": "#999999",
          "gray50": "#808080",
          "gray60": "#666666",
          "gray70": "#4d4d4d",
          "gray80": "#333333",
          "gray90": "#1a1a1a",
          "primary": "#1e98ff",
          "red": "#f6001c",
          "text": "#4d4d4d",
          "white": "#ffffff",
        },
        "font": Object {
          "textFamily": "\\"Noto Sans\\", sans-serif",
          "textSize": 16,
          "titleFamily": "\\"Noto Sans\\", sans-serif",
        },
        "global": Object {
          "@font-face": Object {
            "fontFamily": "\\"Noto Sans\\"",
            "fontStyle": "normal",
            "fontWeight": "400",
            "src": "url(test-file-stub) format(\\"truetype\\")",
          },
        },
      }
    }
  >
    <Button
      label="Botão"
      onClick={[Function]}
    >
      <WithStyles
        label="Botão"
        onClick={[Function]}
        theme={
          Object {
            "breakpoint": Object {
              "small": "@media (max-width: 1280px)",
            },
            "color": Object {
              "gray10": "#e6e6e6",
              "gray20": "#cccccc",
              "gray30": "#b3b3b3",
              "gray40": "#999999",
              "gray50": "#808080",
              "gray60": "#666666",
              "gray70": "#4d4d4d",
              "gray80": "#333333",
              "gray90": "#1a1a1a",
              "primary": "#1e98ff",
              "red": "#f6001c",
              "text": "#4d4d4d",
              "white": "#ffffff",
            },
            "font": Object {
              "textFamily": "\\"Noto Sans\\", sans-serif",
              "textSize": 16,
              "titleFamily": "\\"Noto Sans\\", sans-serif",
            },
            "global": Object {
              "@font-face": Object {
                "fontFamily": "\\"Noto Sans\\"",
                "fontStyle": "normal",
                "fontWeight": "400",
                "src": "url(test-file-stub) format(\\"truetype\\")",
              },
            },
          }
        }
      >
        <Button
          css={[Function]}
          label="Botão"
          onClick={[Function]}
          theme={
            Object {
              "breakpoint": Object {
                "small": "@media (max-width: 1280px)",
              },
              "color": Object {
                "gray10": "#e6e6e6",
                "gray20": "#cccccc",
                "gray30": "#b3b3b3",
                "gray40": "#999999",
                "gray50": "#808080",
                "gray60": "#666666",
                "gray70": "#4d4d4d",
                "gray80": "#333333",
                "gray90": "#1a1a1a",
                "primary": "#1e98ff",
                "red": "#f6001c",
                "text": "#4d4d4d",
                "white": "#ffffff",
              },
              "font": Object {
                "textFamily": "\\"Noto Sans\\", sans-serif",
                "textSize": 16,
                "titleFamily": "\\"Noto Sans\\", sans-serif",
              },
              "global": Object {
                "@font-face": Object {
                  "fontFamily": "\\"Noto Sans\\"",
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "src": "url(test-file-stub) format(\\"truetype\\")",
                },
              },
            }
          }
        >
          <Button
            css={[Function]}
            label="Botão"
            onClick={[Function]}
            theme={
              Object {
                "breakpoint": Object {
                  "small": "@media (max-width: 1280px)",
                },
                "color": Object {
                  "gray10": "#e6e6e6",
                  "gray20": "#cccccc",
                  "gray30": "#b3b3b3",
                  "gray40": "#999999",
                  "gray50": "#808080",
                  "gray60": "#666666",
                  "gray70": "#4d4d4d",
                  "gray80": "#333333",
                  "gray90": "#1a1a1a",
                  "primary": "#1e98ff",
                  "red": "#f6001c",
                  "text": "#4d4d4d",
                  "white": "#ffffff",
                },
                "font": Object {
                  "textFamily": "\\"Noto Sans\\", sans-serif",
                  "textSize": 16,
                  "titleFamily": "\\"Noto Sans\\", sans-serif",
                },
                "global": Object {
                  "@font-face": Object {
                    "fontFamily": "\\"Noto Sans\\"",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "src": "url(test-file-stub) format(\\"truetype\\")",
                  },
                },
              }
            }
            type="normal"
          >
            <button
              className="css-96lcq"
              onClick={[Function]}
              onKeyPress={[Function]}
              type="button"
            >
              <span>
                Botão
              </span>
            </button>
          </Button>
        </Button>
      </WithStyles>
    </Button>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Button deve ter animação de "carregando" ao especificar onClick com retorno do tipo Promise 2`] = `
<ThemeProvider
  theme={
    Object {
      "breakpoint": Object {
        "small": "@media (max-width: 1280px)",
      },
      "color": Object {
        "gray10": "#e6e6e6",
        "gray20": "#cccccc",
        "gray30": "#b3b3b3",
        "gray40": "#999999",
        "gray50": "#808080",
        "gray60": "#666666",
        "gray70": "#4d4d4d",
        "gray80": "#333333",
        "gray90": "#1a1a1a",
        "primary": "#1e98ff",
        "red": "#f6001c",
        "text": "#4d4d4d",
        "white": "#ffffff",
      },
      "font": Object {
        "textFamily": "\\"Noto Sans\\", sans-serif",
        "textSize": 16,
        "titleFamily": "\\"Noto Sans\\", sans-serif",
      },
      "global": Object {
        "@font-face": Object {
          "fontFamily": "\\"Noto Sans\\"",
          "fontStyle": "normal",
          "fontWeight": "400",
          "src": "url(test-file-stub) format(\\"truetype\\")",
        },
      },
    }
  }
>
  <ThemeProvider
    theme={
      Object {
        "breakpoint": Object {
          "small": "@media (max-width: 1280px)",
        },
        "color": Object {
          "gray10": "#e6e6e6",
          "gray20": "#cccccc",
          "gray30": "#b3b3b3",
          "gray40": "#999999",
          "gray50": "#808080",
          "gray60": "#666666",
          "gray70": "#4d4d4d",
          "gray80": "#333333",
          "gray90": "#1a1a1a",
          "primary": "#1e98ff",
          "red": "#f6001c",
          "text": "#4d4d4d",
          "white": "#ffffff",
        },
        "font": Object {
          "textFamily": "\\"Noto Sans\\", sans-serif",
          "textSize": 16,
          "titleFamily": "\\"Noto Sans\\", sans-serif",
        },
        "global": Object {
          "@font-face": Object {
            "fontFamily": "\\"Noto Sans\\"",
            "fontStyle": "normal",
            "fontWeight": "400",
            "src": "url(test-file-stub) format(\\"truetype\\")",
          },
        },
      }
    }
  >
    <Button
      label="Botão"
      onClick={[Function]}
    >
      <WithStyles
        label="Botão"
        onClick={[Function]}
        theme={
          Object {
            "breakpoint": Object {
              "small": "@media (max-width: 1280px)",
            },
            "color": Object {
              "gray10": "#e6e6e6",
              "gray20": "#cccccc",
              "gray30": "#b3b3b3",
              "gray40": "#999999",
              "gray50": "#808080",
              "gray60": "#666666",
              "gray70": "#4d4d4d",
              "gray80": "#333333",
              "gray90": "#1a1a1a",
              "primary": "#1e98ff",
              "red": "#f6001c",
              "text": "#4d4d4d",
              "white": "#ffffff",
            },
            "font": Object {
              "textFamily": "\\"Noto Sans\\", sans-serif",
              "textSize": 16,
              "titleFamily": "\\"Noto Sans\\", sans-serif",
            },
            "global": Object {
              "@font-face": Object {
                "fontFamily": "\\"Noto Sans\\"",
                "fontStyle": "normal",
                "fontWeight": "400",
                "src": "url(test-file-stub) format(\\"truetype\\")",
              },
            },
          }
        }
      >
        <Button
          css={[Function]}
          label="Botão"
          onClick={[Function]}
          theme={
            Object {
              "breakpoint": Object {
                "small": "@media (max-width: 1280px)",
              },
              "color": Object {
                "gray10": "#e6e6e6",
                "gray20": "#cccccc",
                "gray30": "#b3b3b3",
                "gray40": "#999999",
                "gray50": "#808080",
                "gray60": "#666666",
                "gray70": "#4d4d4d",
                "gray80": "#333333",
                "gray90": "#1a1a1a",
                "primary": "#1e98ff",
                "red": "#f6001c",
                "text": "#4d4d4d",
                "white": "#ffffff",
              },
              "font": Object {
                "textFamily": "\\"Noto Sans\\", sans-serif",
                "textSize": 16,
                "titleFamily": "\\"Noto Sans\\", sans-serif",
              },
              "global": Object {
                "@font-face": Object {
                  "fontFamily": "\\"Noto Sans\\"",
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "src": "url(test-file-stub) format(\\"truetype\\")",
                },
              },
            }
          }
        >
          <Button
            css={[Function]}
            label="Botão"
            onClick={[Function]}
            theme={
              Object {
                "breakpoint": Object {
                  "small": "@media (max-width: 1280px)",
                },
                "color": Object {
                  "gray10": "#e6e6e6",
                  "gray20": "#cccccc",
                  "gray30": "#b3b3b3",
                  "gray40": "#999999",
                  "gray50": "#808080",
                  "gray60": "#666666",
                  "gray70": "#4d4d4d",
                  "gray80": "#333333",
                  "gray90": "#1a1a1a",
                  "primary": "#1e98ff",
                  "red": "#f6001c",
                  "text": "#4d4d4d",
                  "white": "#ffffff",
                },
                "font": Object {
                  "textFamily": "\\"Noto Sans\\", sans-serif",
                  "textSize": 16,
                  "titleFamily": "\\"Noto Sans\\", sans-serif",
                },
                "global": Object {
                  "@font-face": Object {
                    "fontFamily": "\\"Noto Sans\\"",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "src": "url(test-file-stub) format(\\"truetype\\")",
                  },
                },
              }
            }
            type="normal"
          >
            <button
              className="css-96lcq"
              onClick={[Function]}
              onKeyPress={[Function]}
              type="button"
            >
              <span>
                Botão
              </span>
            </button>
          </Button>
        </Button>
      </WithStyles>
    </Button>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Button não deve ter animação com "onClick" que não seja promise 1`] = `
<ThemeProvider
  theme={
    Object {
      "breakpoint": Object {
        "small": "@media (max-width: 1280px)",
      },
      "color": Object {
        "gray10": "#e6e6e6",
        "gray20": "#cccccc",
        "gray30": "#b3b3b3",
        "gray40": "#999999",
        "gray50": "#808080",
        "gray60": "#666666",
        "gray70": "#4d4d4d",
        "gray80": "#333333",
        "gray90": "#1a1a1a",
        "primary": "#1e98ff",
        "red": "#f6001c",
        "text": "#4d4d4d",
        "white": "#ffffff",
      },
      "font": Object {
        "textFamily": "\\"Noto Sans\\", sans-serif",
        "textSize": 16,
        "titleFamily": "\\"Noto Sans\\", sans-serif",
      },
      "global": Object {
        "@font-face": Object {
          "fontFamily": "\\"Noto Sans\\"",
          "fontStyle": "normal",
          "fontWeight": "400",
          "src": "url(test-file-stub) format(\\"truetype\\")",
        },
      },
    }
  }
>
  <ThemeProvider
    theme={
      Object {
        "breakpoint": Object {
          "small": "@media (max-width: 1280px)",
        },
        "color": Object {
          "gray10": "#e6e6e6",
          "gray20": "#cccccc",
          "gray30": "#b3b3b3",
          "gray40": "#999999",
          "gray50": "#808080",
          "gray60": "#666666",
          "gray70": "#4d4d4d",
          "gray80": "#333333",
          "gray90": "#1a1a1a",
          "primary": "#1e98ff",
          "red": "#f6001c",
          "text": "#4d4d4d",
          "white": "#ffffff",
        },
        "font": Object {
          "textFamily": "\\"Noto Sans\\", sans-serif",
          "textSize": 16,
          "titleFamily": "\\"Noto Sans\\", sans-serif",
        },
        "global": Object {
          "@font-face": Object {
            "fontFamily": "\\"Noto Sans\\"",
            "fontStyle": "normal",
            "fontWeight": "400",
            "src": "url(test-file-stub) format(\\"truetype\\")",
          },
        },
      }
    }
  >
    <Button
      label="Botão"
      onClick={[Function]}
    >
      <WithStyles
        label="Botão"
        onClick={[Function]}
        theme={
          Object {
            "breakpoint": Object {
              "small": "@media (max-width: 1280px)",
            },
            "color": Object {
              "gray10": "#e6e6e6",
              "gray20": "#cccccc",
              "gray30": "#b3b3b3",
              "gray40": "#999999",
              "gray50": "#808080",
              "gray60": "#666666",
              "gray70": "#4d4d4d",
              "gray80": "#333333",
              "gray90": "#1a1a1a",
              "primary": "#1e98ff",
              "red": "#f6001c",
              "text": "#4d4d4d",
              "white": "#ffffff",
            },
            "font": Object {
              "textFamily": "\\"Noto Sans\\", sans-serif",
              "textSize": 16,
              "titleFamily": "\\"Noto Sans\\", sans-serif",
            },
            "global": Object {
              "@font-face": Object {
                "fontFamily": "\\"Noto Sans\\"",
                "fontStyle": "normal",
                "fontWeight": "400",
                "src": "url(test-file-stub) format(\\"truetype\\")",
              },
            },
          }
        }
      >
        <Button
          css={[Function]}
          label="Botão"
          onClick={[Function]}
          theme={
            Object {
              "breakpoint": Object {
                "small": "@media (max-width: 1280px)",
              },
              "color": Object {
                "gray10": "#e6e6e6",
                "gray20": "#cccccc",
                "gray30": "#b3b3b3",
                "gray40": "#999999",
                "gray50": "#808080",
                "gray60": "#666666",
                "gray70": "#4d4d4d",
                "gray80": "#333333",
                "gray90": "#1a1a1a",
                "primary": "#1e98ff",
                "red": "#f6001c",
                "text": "#4d4d4d",
                "white": "#ffffff",
              },
              "font": Object {
                "textFamily": "\\"Noto Sans\\", sans-serif",
                "textSize": 16,
                "titleFamily": "\\"Noto Sans\\", sans-serif",
              },
              "global": Object {
                "@font-face": Object {
                  "fontFamily": "\\"Noto Sans\\"",
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "src": "url(test-file-stub) format(\\"truetype\\")",
                },
              },
            }
          }
        >
          <Button
            css={[Function]}
            label="Botão"
            onClick={[Function]}
            theme={
              Object {
                "breakpoint": Object {
                  "small": "@media (max-width: 1280px)",
                },
                "color": Object {
                  "gray10": "#e6e6e6",
                  "gray20": "#cccccc",
                  "gray30": "#b3b3b3",
                  "gray40": "#999999",
                  "gray50": "#808080",
                  "gray60": "#666666",
                  "gray70": "#4d4d4d",
                  "gray80": "#333333",
                  "gray90": "#1a1a1a",
                  "primary": "#1e98ff",
                  "red": "#f6001c",
                  "text": "#4d4d4d",
                  "white": "#ffffff",
                },
                "font": Object {
                  "textFamily": "\\"Noto Sans\\", sans-serif",
                  "textSize": 16,
                  "titleFamily": "\\"Noto Sans\\", sans-serif",
                },
                "global": Object {
                  "@font-face": Object {
                    "fontFamily": "\\"Noto Sans\\"",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "src": "url(test-file-stub) format(\\"truetype\\")",
                  },
                },
              }
            }
            type="normal"
          >
            <button
              className="css-96lcq"
              onClick={[Function]}
              onKeyPress={[Function]}
              type="button"
            >
              <span>
                Botão
              </span>
            </button>
          </Button>
        </Button>
      </WithStyles>
    </Button>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Button não deve ter animação com "onClick" que não seja promise 2`] = `
<ThemeProvider
  theme={
    Object {
      "breakpoint": Object {
        "small": "@media (max-width: 1280px)",
      },
      "color": Object {
        "gray10": "#e6e6e6",
        "gray20": "#cccccc",
        "gray30": "#b3b3b3",
        "gray40": "#999999",
        "gray50": "#808080",
        "gray60": "#666666",
        "gray70": "#4d4d4d",
        "gray80": "#333333",
        "gray90": "#1a1a1a",
        "primary": "#1e98ff",
        "red": "#f6001c",
        "text": "#4d4d4d",
        "white": "#ffffff",
      },
      "font": Object {
        "textFamily": "\\"Noto Sans\\", sans-serif",
        "textSize": 16,
        "titleFamily": "\\"Noto Sans\\", sans-serif",
      },
      "global": Object {
        "@font-face": Object {
          "fontFamily": "\\"Noto Sans\\"",
          "fontStyle": "normal",
          "fontWeight": "400",
          "src": "url(test-file-stub) format(\\"truetype\\")",
        },
      },
    }
  }
>
  <ThemeProvider
    theme={
      Object {
        "breakpoint": Object {
          "small": "@media (max-width: 1280px)",
        },
        "color": Object {
          "gray10": "#e6e6e6",
          "gray20": "#cccccc",
          "gray30": "#b3b3b3",
          "gray40": "#999999",
          "gray50": "#808080",
          "gray60": "#666666",
          "gray70": "#4d4d4d",
          "gray80": "#333333",
          "gray90": "#1a1a1a",
          "primary": "#1e98ff",
          "red": "#f6001c",
          "text": "#4d4d4d",
          "white": "#ffffff",
        },
        "font": Object {
          "textFamily": "\\"Noto Sans\\", sans-serif",
          "textSize": 16,
          "titleFamily": "\\"Noto Sans\\", sans-serif",
        },
        "global": Object {
          "@font-face": Object {
            "fontFamily": "\\"Noto Sans\\"",
            "fontStyle": "normal",
            "fontWeight": "400",
            "src": "url(test-file-stub) format(\\"truetype\\")",
          },
        },
      }
    }
  >
    <Button
      label="Botão"
      onClick={[Function]}
    >
      <WithStyles
        label="Botão"
        onClick={[Function]}
        theme={
          Object {
            "breakpoint": Object {
              "small": "@media (max-width: 1280px)",
            },
            "color": Object {
              "gray10": "#e6e6e6",
              "gray20": "#cccccc",
              "gray30": "#b3b3b3",
              "gray40": "#999999",
              "gray50": "#808080",
              "gray60": "#666666",
              "gray70": "#4d4d4d",
              "gray80": "#333333",
              "gray90": "#1a1a1a",
              "primary": "#1e98ff",
              "red": "#f6001c",
              "text": "#4d4d4d",
              "white": "#ffffff",
            },
            "font": Object {
              "textFamily": "\\"Noto Sans\\", sans-serif",
              "textSize": 16,
              "titleFamily": "\\"Noto Sans\\", sans-serif",
            },
            "global": Object {
              "@font-face": Object {
                "fontFamily": "\\"Noto Sans\\"",
                "fontStyle": "normal",
                "fontWeight": "400",
                "src": "url(test-file-stub) format(\\"truetype\\")",
              },
            },
          }
        }
      >
        <Button
          css={[Function]}
          label="Botão"
          onClick={[Function]}
          theme={
            Object {
              "breakpoint": Object {
                "small": "@media (max-width: 1280px)",
              },
              "color": Object {
                "gray10": "#e6e6e6",
                "gray20": "#cccccc",
                "gray30": "#b3b3b3",
                "gray40": "#999999",
                "gray50": "#808080",
                "gray60": "#666666",
                "gray70": "#4d4d4d",
                "gray80": "#333333",
                "gray90": "#1a1a1a",
                "primary": "#1e98ff",
                "red": "#f6001c",
                "text": "#4d4d4d",
                "white": "#ffffff",
              },
              "font": Object {
                "textFamily": "\\"Noto Sans\\", sans-serif",
                "textSize": 16,
                "titleFamily": "\\"Noto Sans\\", sans-serif",
              },
              "global": Object {
                "@font-face": Object {
                  "fontFamily": "\\"Noto Sans\\"",
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "src": "url(test-file-stub) format(\\"truetype\\")",
                },
              },
            }
          }
        >
          <Button
            css={[Function]}
            label="Botão"
            onClick={[Function]}
            theme={
              Object {
                "breakpoint": Object {
                  "small": "@media (max-width: 1280px)",
                },
                "color": Object {
                  "gray10": "#e6e6e6",
                  "gray20": "#cccccc",
                  "gray30": "#b3b3b3",
                  "gray40": "#999999",
                  "gray50": "#808080",
                  "gray60": "#666666",
                  "gray70": "#4d4d4d",
                  "gray80": "#333333",
                  "gray90": "#1a1a1a",
                  "primary": "#1e98ff",
                  "red": "#f6001c",
                  "text": "#4d4d4d",
                  "white": "#ffffff",
                },
                "font": Object {
                  "textFamily": "\\"Noto Sans\\", sans-serif",
                  "textSize": 16,
                  "titleFamily": "\\"Noto Sans\\", sans-serif",
                },
                "global": Object {
                  "@font-face": Object {
                    "fontFamily": "\\"Noto Sans\\"",
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "src": "url(test-file-stub) format(\\"truetype\\")",
                  },
                },
              }
            }
            type="normal"
          >
            <button
              className="css-96lcq"
              onClick={[Function]}
              onKeyPress={[Function]}
              type="button"
            >
              <span>
                Botão
              </span>
            </button>
          </Button>
        </Button>
      </WithStyles>
    </Button>
  </ThemeProvider>
</ThemeProvider>
`;
